구분선 진하게 수정, 자격증/어학 분리

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
 
                 <!-- Certifications Card -->
                 <div class="info-card">
-                    <h3>📜 자격증&어학</h3>
+                    <h3>📜 자격증</h3>
                     <ul class="info-list">
                         <li>
                             <strong>SQLD</strong>
@@ -624,6 +624,10 @@
                             <strong>정보처리기사</strong>
                             <span class="date">2026</span>
                         </li>
+                    </ul>
+                    <hr style="border: none; border-top: 2px solid var(--text-light); margin: 0.8rem 0;">
+                    <h3>🌐 어학</h3>
+                    <ul class="info-list">
                         <li>
                             <strong>Toeic Speaking Test | IH(140)</strong>
                             <span class="date">2025</span>
@@ -643,7 +647,7 @@
                             <span class="date">2026.01 - 현재</span>
                         </li>
                     </ul>
-                    <hr style="border: none; border-top: 1px solid var(--border); margin: 0.8rem 0;">
+                    <hr style="border: none; border-top: 2px solid var(--text-light); margin: 0.8rem 0;">
                     <h3>🏆 수상</h3>
                     <ul class="info-list">
                         <li>
