--- a/index.html
+++ b/index.html
@@ -688,6 +688,40 @@
                     <span class="skill-tag">Git</span>
                 </div>
             </div>
+
+            <!-- Club Activity Section -->
+            <div class="info-card" style="margin-top: 2rem;">
+                <h3>🎯 동아리 — 모멘텀(Momentum)</h3>
+                <p style="color: var(--text-secondary); font-size: 0.88rem; margin-bottom: 1rem; line-height: 1.7;">
+                    같은 학부 동기들이 모여 전공 학습과 실무 역량을 함께 키우기 위해 활동하는 학술·프로젝트 동아리입니다.
+                </p>
+                <ul class="info-list">
+                    <li>
+                        <div>
+                            <strong>전공 학습 스터디</strong><br>
+                            <span style="font-size: 0.82rem;">운영체제, 컴퓨터구조, 데이터베이스, 머신러닝 등 전공 스터디 구성 및 시험 대비 자료 제작</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <strong>공모전 참가 및 수상</strong><br>
+                            <span style="font-size: 0.82rem;">교내·교외 AI/데이터 분석 공모전에 팀으로 출전하여 데이터 전처리, 모델링, 결과 분석 등 협업 수행</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <strong>자격증·기술 스터디</strong><br>
+                            <span style="font-size: 0.82rem;">ADsP, SQLD 등 자격증 준비 및 Python 기반 ML/DL, 클라우드 기술 공동 학습</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <strong>논문 리뷰 및 학술 활동</strong><br>
+                            <span style="font-size: 0.82rem;">Vision, NLP, 추천 시스템 등 최신 AI 트렌드 논문 리딩 및 구현 방법 토론</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <!-- Projects Section -->
