동아리 활동 기간 추가

--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
 
             <!-- Club Activity Section -->
             <div class="info-card" style="margin-top: 2rem;">
-                <h3>🎯 동아리 — 모멘텀(Momentum)</h3>
+                <h3 style="justify-content: space-between;">🎯 동아리 — 모멘텀(Momentum) <span style="font-size: 0.82rem; font-weight: 400; color: var(--text-light);">2024.09 - 현재</span></h3>
                 <p style="color: var(--text-secondary); font-size: 0.88rem; margin-bottom: 1rem; line-height: 1.7;">
                     같은 학부 동기들이 모여 전공 학습과 실무 역량을 함께 키우기 위해 활동하는 학술·프로젝트 동아리입니다.
                 </p>
